# Url-Summarizer

./: README.md  main.py  pyproject.toml  requirements.txt
UrlSummarizer/: __init__.py
UrlSummarizer/loaders/: __init__.py  url_loader.py
UrlSummarizer/prompts/: __init__.py  summary_prompt.py
UrlSummarizer/services/: __init__.py  summarizer.py
