[project]
name = "url-summarizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Samarth-Prajapati",email = "samarthp475@gmail.com"}
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "validators (>=0.35.0,<0.36.0)",
    "youtube-transcript-api (>=1.2.4,<2.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "langchain (>=1.2.12,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.2.19,<2.0.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "unstructured (>=0.21.5,<0.22.0)",
    "pytube (>=15.0.0,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
